# bbsrtool

./: pyproject.toml
bbsrtool/: cli.py  datamodel.py
