[tool.poetry]
name = "bbsrtool"
version = "0.1.0"
description = "BBSR project management utilities"
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["email"], version = "^1.8.2"}
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
